fixed body color. Moved model on mobile

--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 
 
 /*################### Modal Stuff ###############*/
- .body {
+ body {
     padding: 2px;
     width: 100%;
     height: 100%;
     background-color: black;
+    margin: 0;
 }
 
 .modal {
     width: 100%;
     height: 100%;
     position: fixed;
+    top: 50%;
     background-color: rgba(0, 0, 0, 0.5);
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -123,7 +125,7 @@
     justify-content: center;
     grid-area: h;
     /* grid-column: 1 / -1; */
-    background-color: paleturquoise;
+    background-color: rgba(56, 54, 54);
     display: flex;
     
 }
@@ -376,7 +378,7 @@
     
     .header {
         grid-area: h;
-        background-color: paleturquoise;
+        background-color: rgba(56, 54, 54);
         display: flex;
     }
 
